# factorypatternlab

./: CMakeLists.txt  add.hpp  factory.cpp  factory.hpp  main.cpp  mult.hpp  pow.hpp  test.cpp
